kustomize/base-angular/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: service
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: name
  type: ClusterIP
  sessionAffinity: None
