kustomize/base-angular/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: route
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: name
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
